--- a/jacks-website/src/components/WorkSample/OurWork.css
+++ b/jacks-website/src/components/WorkSample/OurWork.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .all-work-container {
     display: grid;
     grid-template-columns: 1fr;
@@ -11,6 +15,12 @@
     }
 }
 
+@media (min-width: 1024px) {
+  .all-work-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
 .slider-container {
     display: flex;
     justify-content: center;
@@ -18,9 +28,18 @@
     width: 100%;
     height: auto;
     margin: 0 auto;
-    max-width: 500px;
+    max-width: 400px;
     min-width: 200px;
     border: solid 4px;
     border-color: #014421;
+    overflow: hidden;
 }
 
+.slider-container img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
