--- a/jacks-website/src/components/Header/header.css
+++ b/jacks-website/src/components/Header/header.css
@@ -5,6 +5,12 @@ body {
   padding: 0;
 }
 
+@media only screen and (max-width: 768px) {
+  body {
+    background-position: center center;
+  }
+}
+
 .header {
   top: 0;
   left: 0;
