--- a/jacks-website/src/components/Header/header.css
+++ b/jacks-website/src/components/Header/header.css
@@ -1,5 +1,5 @@
 body {
-  background: url('/MainImage.webp') no-repeat center center fixed;
+  background: url('/MainImage.webp') no-repeat center center;
   background-size: cover;
   margin: 0;
   padding: 0;
