--- a/jacks-website/src/components/WorkSample/OurWork.css
+++ b/jacks-website/src/components/WorkSample/OurWork.css
@@ -30,7 +30,8 @@
     margin: 0 auto;
     max-width: 400px;
     min-width: 200px;
-    border: solid 4px;
+    border: solid 8px;
+    border-radius: 4px;
     border-color: #014421;
     overflow: hidden;
 }
