--- a/jacks-website/src/components/Header/header.css
+++ b/jacks-website/src/components/Header/header.css
@@ -1,14 +1,20 @@
 body {
   background: url('/MainImage.webp') no-repeat center center;
   background-size: cover;
-  margin: 0;
-  padding: 0;
+  background-attachment: fixed;
 }
 
 @media only screen and (max-width: 768px) {
   body {
-    background-position: center center;
+    background-position: top center;
   }
+}
+
+@media only screen and (max-width: 480px) {
+  body {
+    background-position: center center;
+    background-size: contain;
+}
 }
 
 .header {
