--- a/jacks-website/src/App.css
+++ b/jacks-website/src/App.css
@@ -4,3 +4,33 @@
     padding: 0;
     font-family: 'Quicksand', sans-serif;
 }
+
+body {
+    background: url('./MainImage.webp') no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed; 
+    min-height: 100vh;  
+  }
+  
+  @media only screen and (max-width: 1024px) {
+    body {
+      background-size: cover; 
+      background-position: top center; 
+    }
+  }
+  
+  @media only screen and (max-width: 768px) {
+    body {
+      background-size: cover; 
+      background-position: top center; 
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    body {
+      background-size: contain; 
+      background-position: center center;
+    }
+  }
+  
+  
