--- a/jacks-website/src/App.css
+++ b/jacks-website/src/App.css
@@ -5,7 +5,7 @@
     font-family: 'Quicksand', sans-serif;
 }
 
-body {
+.background-container {
     background: url('/MainImage.webp') no-repeat center center;
     background-size: cover;
     background-attachment: fixed; 
