--- a/jacks-website/src/App.css
+++ b/jacks-website/src/App.css
@@ -7,30 +7,10 @@
 
 .background-container {
     background: url('/MainImage.webp') no-repeat center center;
+    position: relative;
     background-size: cover;
-    background-attachment: fixed; 
-    min-height: 100vh;  
-  }
-  
-  @media only screen and (max-width: 1024px) {
-    body {
-      background-size: cover; 
-      background-position: top center; 
-    }
-  }
-  
-  @media only screen and (max-width: 768px) {
-    body {
-      background-size: cover; 
-      background-position: top center; 
-    }
-  }
-  
-  @media only screen and (max-width: 480px) {
-    body {
-      background-size: contain; 
-      background-position: center center;
-    }
-  }
+    width: 100%;
+    height: 100vh;
+}
   
   
